--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv-webpack": "^8.0.1",
     "fs": "^0.0.1-security",
     "os": "^0.1.2",
     "path": "^0.12.7",
